src/@stb-components/STBMaterialUiTabs/default_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pod-name-username
spec:
  selector:
    app: pod-name-username
  ports:
  - name: http
    targetPort: 8080
    port: 8080
  - name: https
    targetPort: 8443
    port: 8443
  - name: api
    targetPort: 50000
    port: 50000
