src/@stb-components/STBMaterialUiTabs/default_ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: pod-name
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/preserve-host: "true"
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: pod-name-username.us-west1-a.securethebox.us
    http:
      paths:
      - path: /
        backend:
          serviceName: service-name-username
          servicePort: http
